--- a/index.html
+++ b/index.html
@@ -121,5 +121,15 @@
 
        </div>
     </main>
+
+    <footer class="footer">
+        <ul class="footer__link container">
+            <li class="footer__list">GROVEMADE</li>
+            <li class="footer__list">SHOP</li>
+            <li class="footer__list">EXPLORE</li>
+            <li class="footer__list">MY CART</li>
+        </ul>
+       </footer>
+       
 </body>
 </html>
