--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
             <li class="footer__list">EXPLORE</li>
             <li class="footer__list">MY CART</li>
         </ul>
+
+        <h1 class="container">
+            Zafar
+        </h1>
        </footer>
        
 </body>
